# rustcord

./: .gitignore  Cargo.toml
config/: config.json.template
src/: gateway.rs  main.rs  types.rs
src/api/: base.rs  channel.rs  config.rs  core.rs  guild.rs  interaction.rs  message.rs  misc.rs  mod.rs  user.rs
