[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Christopher Chapline <cachapline8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
url = "2.1.0"
tungstenite = { version = "0.16.0", features = ["native-tls"] }
